syntax = "proto3";

package pb;

import "general.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string access_token = 1;
    string session_id = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
    User user = 6;
}

message LogoutUserResponse {
    string message = 1;
}

message LogoutResponse {
    string message = 1;
 }